

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >


    <TextView android:text="@string/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeBig"
        android:gravity="center"
        android:id="@+id/titleView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:layout_below="@+id/titleView"
        android:gravity="center"
        android:id="@+id/spotifyButton"
        android:background="@color/orange"
        android:onClick="spotifyTapped"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:layout_below="@+id/spotifyButton"
        android:gravity="center"
        android:id="@+id/scoresButton"
        android:background="@color/orange"
        android:onClick="scoresTapped"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:layout_below="@+id/scoresButton"
        android:gravity="center"
        android:id="@+id/libraryButton"
        android:background="@color/orange"
        android:onClick="libraryTapped"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buildit_app"
        android:layout_below="@+id/libraryButton"
        android:gravity="center"
        android:id="@+id/buildItButton"
        android:background="@color/orange"
        android:onClick="builditTapped"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_app"
        android:layout_below="@+id/buildItButton"
        android:gravity="center"
        android:id="@+id/xyzButton"
        android:background="@color/orange"
        android:onClick="xyzTapped"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="@dimen/buttonMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
        android:layout_below="@+id/xyzButton"
        android:gravity="center"
        android:id="@+id/capstoneButtons"
        android:background="@color/red"
        android:onClick="capstoneTapped"/>
    </RelativeLayout>
</ScrollView>

